Release 2.43.1

Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
Logtalk is free software.  You can redistribute it and/or modify
it under the terms of the "Artistic License 2.0" as published by 
The Perl Foundation. Consult the "LICENSE.txt" file for details.
================================================================


RELEASE NOTES
=============


2.43.1 - August ??, 2011

    Added experimental support for using a predicate template as argument to
    the coinductive/1 directive. This template allows the specification of
    which arguments are meaningful for coinductive success. Based on similar
    functionality found on on Feliks Kluzniak's DRA meta-interpreter.

    Improved support for debugging coinductive predicates when using the
    Logtalk built-in debugger.

    Lifted a long-standing limitation that prevented the user definition of
    wrapper predicates for the bagof/3 and setof/3 built-in methods whenever
    the goal argument may use the ^/2 existential quantifier.

    Added support for the "^" meta-predicate meta-argument mode specifier
    suggested by Jan Wielemaker and found on SWI-Prolog 5.11.25. This mode
    specifier is useful when defining wrappers for the bagof/3 and setof/3
    built-in methods whenever the goal argument may use the ^/2 existential
    quantifier.

    Added "prolog_compiler" and "prolog_loader" compiler flags, which allow
    passing options to the back-end Prolog compiler built-in predicates that
    compile to disk and load a (compiled) Prolog flag. The default value for
    both flags is the empty list.

    Corrected a bug when compiling calls to Prolog proprietary built-in meta-
    predicates where the Logtalk compiler could attempt to process non meta-
    arguments as goals. This bug only manifested itself with some back-end
    Prolog compilers such as ECLiPSe.

    Corrected a bug in the processing of conditional compilation directives.
